--- a/blog/2021-01-01 feed.md
+++ b/blog/2021-01-01 feed.md
@@ -4,5 +4,5 @@ title: RSS Feed 🚀
 date: 2021/1/1
 ---
 
-- [RSS Feed](../blog/rss.xml)  
-- [Atom Feed](../blog/atom.xml)  
+- [RSS Feed](https://markharrison.io/blog/rss.xml)  
+- [Atom Feed](https://markharrison.io/blog/atom.xml)  
