Update video links

--- a/blog/2021-08-19-gse.md
+++ b/blog/2021-08-19-gse.md
@@ -11,3 +11,5 @@ date: 2021/8/19
 I recently presented ‘Green Software Engineering’ at a community event. A couple of days later the IPCC (Intergovernmental Panel on Climate Change) released a study that highlighted climate change is widespread, rapid, and intensifying, and some trends are now irreversible. The United Nations called it a “code red for humanity” and a catastrophe can only be avoided if the world acts fast.
 
 [Read here](https://cloudblogs.microsoft.com/industry-blog/en-gb/technetuk/2021/08/19/sustainability-and-green-software-engineering/)
+
+[On-demand video](https://www.youtube.com/watch?v=Tcvr30NRWmA)
