Added .NET Aspire blog

--- a/blog/2022-05-29-secapps.md
+++ b/blog/2022-05-29-secapps.md
@@ -6,7 +6,7 @@ tags: [appdev]
 date: 2022/5/29
 ---
 
-![](images/secapps.png)
+![secapps](images/secapps.png)
 
 It was a pleasure to present 'Securing Applications' this week at Build UK.  Furthermore, it was fantastic to see so many people at Microsoft campus - and to know we are now back doing in-person events after the recent difficult and disruptive times.
 
