--- a/blog/2024-10-30-techdebt.md
+++ b/blog/2024-10-30-techdebt.md
@@ -26,4 +26,4 @@ Innovation = Improve outcomes & differentiated value
 
 App modernization aims to reduces technical debt, unlocking time and resources so teams can focus on activities that add business value.
 
-[Graphic](https://raw.githubusercontent.com/markharrison/markharrison.github.io/blog/images/techdebt.jpg)
+[Graphic](https://raw.githubusercontent.com/markharrison/markharrison.github.io/main/blog/images/techdebt.jpg)
