--- a/blog/2024-10-30-techdebt.md
+++ b/blog/2024-10-30-techdebt.md
@@ -18,8 +18,8 @@ Technical debt refers to the accumulation of inefficiencies in a codebase or inf
 
 - **Messy, Unmanaged Codebases**: Poorly organized or outdated code can lead to frequent bugs, making it difficult to extend the application with new features.
 - **Loss of Knowledge**: Developers who originally built the system may no longer be around, leaving the current team to deal with undocumented code, which hampers problem-solving.
-- **Outdated Technology**: Sticking with old frameworks, libraries, or operating systems increases security risks and makes future updates challenging as vendor support dwindles.
-- **On-Premise Infrastructure**: Managing on-prem hardware requires constant attention—patching systems, securing networks, and maintaining backups. This is time-consuming and diverts focus from innovation.
+- **Outdated Technology**: Sticking with old frameworks, libraries, or operating systems increases security risks and makes future updates challenging as owner support dwindles.
+- **On-Premise Infrastructure**: Managing on-prem hardware requires constant attention—patching systems, securing networks, and maintaining backups.  
 
 These factors drain time and energy, forcing teams to focus on maintenance instead of moving the organisation forward.
 
@@ -30,8 +30,8 @@ Eliminating technical debt allows teams to shift their focus from "keeping the l
 - **Faster Feature Development**: With a clean and modern codebase, developers can more easily add new functionality, improving time-to-market for new features.
 - **Improved Security and Stability**: Modernizing outdated technology removes vulnerabilities and reduces downtime, giving teams confidence to innovate without fearing breakdowns.
 - **Cloud-Native Transformation**: Moving to the cloud using serverless or cloud-native technologies reduces the burden of infrastructure management and delivers scalable, cost-efficient software.
-- **Proven Tools and Frameworks**: By adopting up-to-date libraries, SDKs, and frameworks, teams can leverage modern, secure solutions that are actively maintained. This reduces the time spent solving problems that have already been solved elsewhere.
-- **Streamlined Processes with DevSecOps**: Implementing DevSecOps ensures security is integrated into the development cycle, while automation accelerates delivery, reduces errors, and improves overall software quality.
+- **Proven Tools and Frameworks**: By adopting up-to-date libraries, SDKs, and frameworks, teams can leverage modern, secure solutions that are actively maintained. This reduces the time spent on problems that have already been solved elsewhere.
+- **Automation and Left-Shift Security**: Implementing platform engineering and DevSecOps practices ensures that teams can streamline operations, automate repetitive tasks, and integrate security throughout the development cycle. This accelerates delivery, reduces errors, and enables the development of higher-quality software.
 
 ### App Modernization: Reclaiming Time for Innovation
 
