--- a/blog/2024-10-30-techdebt.md
+++ b/blog/2024-10-30-techdebt.md
@@ -17,7 +17,7 @@ Technical debt slows teams down, making it harder to innovate. Removing technica
 Technical debt refers to the accumulation of inefficiencies in a codebase or infrastructure that creates long-term maintenance problems. This debt prevents teams from moving quickly and can significantly impact productivity. Key causes include:
 
 - **Messy, Unmanaged Codebases**: Poorly organized or outdated code can lead to frequent bugs, making it difficult to extend the application with new features.
-- **Loss of Knowledge**: Developers who originally built the system may no longer be around, leaving the current team to deal with undocumented code, which hampers problem-solving.
+- **Lack of Knowledge**: Developers who originally built the system may no longer be around, leaving the current team to deal with undocumented code, which hampers problem-solving.
 - **Outdated Technology**: Sticking with old frameworks, libraries, or operating systems increases security risks and makes future updates challenging as owner support dwindles.
 - **On-Premise Infrastructure**: Managing on-prem hardware requires constant attention—patching systems, securing networks, and maintaining backups.  
 
