--- a/blog/2024-10-30-techdebt.md
+++ b/blog/2024-10-30-techdebt.md
@@ -28,7 +28,7 @@ These factors drain time and energy, forcing teams to focus on maintenance inste
 Eliminating technical debt allows teams to shift their focus from "keeping the lights on" to driving real innovation. Here’s how removing debt can help:
 
 - **Faster Feature Development**: With a clean and modern codebase, developers can more easily add new functionality, improving time-to-market for new features.
-- **Improved Resilience and Scalability**: Modernizing outdated technology removes vulnerabilities and reduces downtime, giving teams confidence to innovate without fearing breakdowns.
+- **Improved Resilience**: Modernizing outdated technology removes vulnerabilities and reduces downtime, giving teams confidence to innovate without fearing breakdowns.
 - **Cloud-Native Transformation**: Moving to the cloud using serverless or cloud-native technologies reduces the burden of infrastructure management and delivers scalable, cost-efficient software.
 - **Proven Tools and Frameworks**: By adopting up-to-date libraries, SDKs, and frameworks, teams can leverage modern, secure solutions that are actively maintained. This reduces the time spent on problems that have already been solved elsewhere.
 - **Automation and Left-Shift Security**: Implementing platform engineering and DevSecOps practices ensures that teams can streamline operations, automate repetitive tasks, and integrate security throughout the development cycle. This accelerates delivery, reduces errors, and enables the development of higher-quality software.
