--- a/blog/2025-07-04-mcp.md
+++ b/blog/2025-07-04-mcp.md
@@ -15,4 +15,4 @@ Sharing a recent session where I discussed the Model Context Protocol, and cover
 - A demo of MCP — including how to configure it so anyone can run it
 - An example of how to develop an MCP server — a potential starter project for connecting to your own knowledge resources
 
-[Transcript](https://markharrison.io/doc-mcp)
+[Transcript](<https://markharrison.io/doc-mcp>)  | [Microsoft Blog](<https://techcommunity.microsoft.com/blog/appsonazureblog/model-context-protocol-mcp---why-what-how-part-1/4430385>)
