--- a/blog/2025-07-04-mcp.md
+++ b/blog/2025-07-04-mcp.md
@@ -1,6 +1,6 @@
 ---
 slug: model-context-protocol
-title: Model Context Protocol
+title: Smart AI integration with the Model Context Protocol
 authors: [markharrison]
 tags: [appdev]
 date: 2025/07/04
